--- a/npm-module-webcam-picture-taker/style.css
+++ b/npm-module-webcam-picture-taker/style.css
@@ -1,6 +1,99 @@
+input#contrast,
+input#hue,
+input#saturation,
+input#lightness {
+    -webkit-appearance: none;
+    margin: 8px 0;
+    padding: 10px 25px 10px 5px;
+    width: 100%;
+}
+
+input#contrast:focus,
+input#hue:focus,
+input#saturation,
+input#lightness {
+    outline: none;
+}
+
+input#contrast::-webkit-slider-runnable-track,
+input#saturation::-webkit-slider-runnable-track,
+input#lightness::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 12.8px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    background: beige;
+    border-radius: 25px;
+    border: 0px solid #000101;
+}
+
+input#contrast::-webkit-slider-thumb,
+input#hue::-webkit-slider-thumb,
+input#saturation::-webkit-slider-thumb,
+input#lightness::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    border: 0px solid #000000;
+    height: 20px;
+    width: 39px;
+    border-radius: 7px;
+    background: grey;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -3.6px;
+}
+
+input#contrast:focus::-webkit-slider-runnable-track,
+input#saturation:focus::-webkit-slider-runnable-track,
+input#lightness:focus::-webkit-slider-runnable-track {
+    background: palegoldenrod;
+}
+
+
+
+input#hue::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 12.8px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    background: linear-gradient(to right, hsl(0, 100%, 88%) 0%, hsl(30, 100%, 88%) 8.3%, hsl(60, 100%, 88%) 16.6%, hsl(90, 100%, 88%) 25%, hsl(120, 100%, 88%) 33.3%, hsl(150, 100%, 88%) 41.6%, hsl(180, 100%, 88%) 50%, hsl(210, 100%, 88%) 58.3%, hsl(240, 100%, 88%) 66.6%, hsl(270, 100%, 88%) 75%, hsl(300, 100%, 88%) 83.3%, hsl(330, 100%, 88%) 91.6%, hsl(360, 100%, 88%) 100%);
+    border-radius: 25px;
+    border: 0px solid #000101;
+}
+
 body {
-    /*background-color: #007bff;
-    text-align: center;
-    */
-    padding: 50px;
+    padding: 30px;
+}
+
+.parent {
+    position: relative;
+}
+
+.cropper-dragger {
+    position: absolute;
+    display: none;
+    left: 100px;
+    top: 70px;
+}
+.reverse-cropper-dragger {
+    position: absolute;
+    left: 100px;
+    bottom: 70px;
+}
+
+.frame {
+    width: 130px;
+    height: 130px;
+    border: 2px solid antiquewhite;
+    position: absolute;
+
+}
+
+.point {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: antiquewhite;
+    padding: 5px;
 }
